--- a/manifest.yml
+++ b/manifest.yml
@@ -7,7 +7,7 @@ applications:
   memory: 512M
   instances: 1
   domain: mybluemix.net
-  command: "bundle exec rake db:migrate && bundle exec rails s -p $PORT"
+  command: "bundle exec rake assets:precompile && bundle exec rake db:migrate && bundle exec rails s -p $PORT"
   stack: cflinuxfs2
   name: freshPotates
   host: freshPotates
